# claudia-code-review

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/slack/: SlackPostList.tsx
src/components/tasks/: TaskList.tsx
src/lib/: utils.ts
src/types/: index.ts
