[package]
name = "claudia-code-review"
version = "0.1.0"
description = "Enhanced GUI app for Claude Code with Slack integration and automated code review workflows"
authors = ["TsuyoshiTomozawa"]
license = "AGPL-3.0"
edition = "2021"
repository = "https://github.com/TsuyoshiTomozawa/claudia-code-review"
keywords = ["claude-code", "slack", "code-review", "automation", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claudia_code_review_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri and plugins
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# HTTP client for Slack API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
regex = "1"
glob = "0.3"
base64 = "0.22"
libc = "0.2"
tempfile = "3"
which = "7"
sha2 = "0.10"
zstd = "0.13"
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2"

# Encryption for secure token storage
ring = "0.17"

# URL parsing and validation
url = "2.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Development feature for enhanced debugging
dev-tools = []
